0.4.4
--------------------------------------------------------
- 功能支持
  * util/dispatcher/dispatcher 增加根据别名取模块 UMI 接口 _$getUMIByAlias
  * util/cursor/cursor 增加 _$lineno 支持获取当前光标所在的行

- 功能变化
  * util/cache/list _$addItem 接口支持批量添加列表项
  * util/ajax/tag 模块 _$loadHtml 接口需要跨域载入的时候采用 ajax 先加载文本再解析内容
  * NEJ.define 处理过程忽略 NEJ 模板封装脚本，即 type="nej/*" 的 script 标签

0.4.3   (2017-06-26)
--------------------------------------------------------
- 功能支持
  * 添加消息总线机制

0.4.2   (2017-06-05)
--------------------------------------------------------
- 功能变化
  * util/ajax/rest 支持从输入的data中解析地址上的rest变量
  * util/ajax/rest 支持 :PARAM 的地址变量格式
  * util/cache/abstract 支持在 __doSendRequest 的hook接口中传入当前请求key
  * base/element getChildren接口兼容IOS8的XML DOM


0.4.1   (2017-06-01)
--------------------------------------------------------
- 功能变化
  * bower 安装时忽略 test,doc,res,demo 目录


0.4.0   (2017-04-10)
--------------------------------------------------------
- 功能支持
  * 列表删除cache中回传服务器返回的结果

- BUG修复模块
  * util/flash/flash 删除flash检测次数限制

0.3.9   (2017-03-22)
--------------------------------------------------------
- BUG修复模块
  * 修复相对协议模块载入地址错误 (支持https)
  * 修复platform模块无法判断Google Chrome for IOS
  * 修复列表取单项详情时候传入的主键名称为 id

0.3.8   (2017-02-09)
--------------------------------------------------------
- 功能支持
  * 剪切板支持跨域flash引入
  * NEJ 模块文件载入支持文件名版本号

- BUG修复模块
  * 修复 regularModule build 参数输入


0.3.7   (2017-01-09)
--------------------------------------------------------
- 功能支持
  * 支持缓存列表填充验证时重写列表项验证逻辑
  * 支持缓存在 filter 阶段直接返回结果阻止发送请求
  * 增加 __getListReqKey/__getItemReqKey 取请求标识
  * 支持 __doSendRequest 时使用 options 配置请求地址
  * __doSendRequest 过程的事件支持输入 cnf 配置信息对象

- BUG修复模块
  * 修正 util/cache/list 下 getList/getItem 的 ext 参数回传异常


0.3.5   (2016-11-22)
--------------------------------------------------------
- BUG修复模块
  * 修正 IE8 下取 DOM 属性异常问题


0.3.4   (2016-11-16)
--------------------------------------------------------
- 功能支持
  * 支持缓存配置 type 属性

0.3.3   (2016-10-31)